# tradingpulse-news-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: article.py  bot.py  db.py  feeder.py  post_generator.py  settings.py  tasks.py  yagpt_adapter.py
config/: settings.py
core/: application.py  bot.py
feeding/: article.py  feeder.py  sources_list.py
feeding/sources/: base.py  cointelegraph.py  rss.py
processing/: processor.py
