[project]
name = "tradingpulse-news"
version = "0.1.0"
description = ""
authors = [
    {name = "kranik",email = "optimalx@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "feedparser",
    "python-dotenv",
    "maxapi (>=1.1.0,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "openai>=2.43.0",
    "peewee>=4.1.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "ruff>=0.15.19",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [
    "__debug_scripts__",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv"
]


